# Datacollector

./: JETSON_GUIDE.md  OPERATIONS.md  README.md  requirements.txt
dataset/: datacollector.db
dataset/labels/train/: cam_test_1766755919212_a702b0bb.txt
jetson_cuda_python/: requirements.txt
jetson_cuda_python/config/: config.yaml
jetson_cuda_python/src/: camera_manager.py  inference_engine.py  main.py  simulator.py  utils.py
pc_test_python/: README.md  requirements.txt
pc_test_python/config/: config.yaml
pc_test_python/dataset_pc_test/: datacollector_test.db
pc_test_python/scripts/: download_ppe_model.py  export_onnx.py  visualize_data.py
pc_test_python/src/: camera_manager.py  inference_engine.py  utils.py
rpi_hailo_cpp/: CMakeLists.txt  README.md  verify.sh
rpi_hailo_cpp/config/: config.yaml
rpi_hailo_cpp/src/: CameraManager.cpp  DatasetWriter.cpp  DatasetWriter.hpp  InferenceEngine.hpp  README.md  Utils.hpp  main.cpp
rpi_hailo_python/: HAILO_DEPLOYMENT.md  README.md  requirements.txt
rpi_hailo_python/config/: config.yaml  config_ppe.yaml
rpi_hailo_python/dataset_pc_test/: datacollector_test.db
rpi_hailo_python/dataset_ppe/: datacollector_ppe.db
rpi_hailo_python/deploy/: datacollector.service
rpi_hailo_python/scripts/: visualize_data.py
rpi_hailo_python/src/: __init__.py  camera_manager.py  dataset_writer.py  inference_engine.py  main.py  simulator.py  utils.py
src/: camera_manager.py  main.py  main_jetson.py
src_cpp/: CMakeLists.txt  CameraManager.hpp  Config.hpp  DatasetWriter.hpp  InferenceEngine.cpp  Utils.cpp
(+70 files in other folders)
